remove pde loss from inferencer

--- a/utils/get_scale.ipynb
+++ b/utils/get_scale.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File(os.path.join(datapath, \"train_k1_5_32k.h5\"), \"r\") as f:\n",
+    "with h5py.File(os.path.join(datapath, \"_train_k1_5_32k.h5\"), \"r\") as f:\n",
     "    x_train = f['fields'][:]\n",
     "    x_tensor = f['tensor'][:]\n",
     "    print(list(f.keys()))"
